--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-player",
   "version": "0.1.0",
-  "homepage": "gideongoddard.github.io/video-player",
+  "homepage": "https://gideongoddard.github.io/video-player",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
